--- a/mainall/templates/mainall/map_PGU.html
+++ b/mainall/templates/mainall/map_PGU.html
@@ -9,28 +9,28 @@
 
  <div>
     <div class = "mapcolor">
-      <img class ="map" src="mainall/static/mainall/media/mapPGU.jpg" alt="map"/>
+      <img class ="map" src="mainall/static/mainall/media/mapPGU.png" alt="map"/>
       <div class="legenda p-4 mb-2 bg-light mx-3">
         <div class="container-fluid py-3">
             <h1 class="header_text1 display-6 fw-bold">Легенда</h1>
         <div class="spisok1 py-4" type="circle">
 
             <li><img class ="nomer" src="mainall/static/mainall/media/1.png" alt="nomer"/><a href="/login">Корпус № 1. Физфак, Биофак</a></li>
-            <li>Корпус № 2. Мехмат, ИПФ, ФСФ</li>
-            <li>Корпус № 3. СИЯЛ</li>
-            <li>Корпус № 4. Колледж ПГНИУ</li>
-            <li>Корпус № 5. Филфак, Юрфак, СИЯЛ</li>
-            <li>Корпус № 6. Химфак</li>
-            <li>Корпус № 7. СДК, профком</li>
-            <li>Корпус № 8. Географы, Геологи</li>
-            <li>Корпус № 9. Юрфак</li>
-            <li>Корпус № 10. Спортивный</li>
-            <li>Корпус № 11. Юрфак</li>
-            <li>Корпус № 12. Эконом</li>
-            <li>Корпус ЕНИ</li>
-            <li>Общежитие № 2</li>
-            <li>Общежитие № 8</li>
-            <li>Ботанический сад</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/2.png" alt="nomer"/>Корпус № 2. Мехмат, ИПФ, ФСФ</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/3.png" alt="nomer"/>Корпус № 3. СИЯЛ</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/4.png" alt="nomer"/>Корпус № 4. Колледж ПГНИУ</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/5.png" alt="nomer"/>Корпус № 5. Филфак, Юрфак, СИЯЛ</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/6.png" alt="nomer"/>Корпус № 6. Химфак</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/7.png" alt="nomer"/>Корпус № 7. СДК, профком</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/8.png" alt="nomer"/>Корпус № 8. Географы, Геологи</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/9.png" alt="nomer"/>Корпус № 9. Юрфак</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/10.png" alt="nomer"/>Корпус № 10. Спортивный</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/11.png" alt="nomer"/>Корпус № 11. Юрфак</li>
+            <li><img class ="text" src="mainall/static/mainall/media/12.png" alt="text" width="34px"/>Корпус № 12. Эконом</li>
+            <li><img src="mainall/static/mainall/media/ENI.png" width="60px"/>Корпус ЕНИ</li>
+            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/>Общежитие № 2</li>
+            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/>Общежитие № 8</li>
+            <li><img class ="text" src="mainall/static/mainall/media/BotSad.png" alt="text" width="140px"/>Ботанический сад</li>
 
         </div>
         </div>
