--- a/mainall/static/mainall/css/styles.css
+++ b/mainall/static/mainall/css/styles.css
@@ -16,6 +16,7 @@ h1.header_text {
 
 h1.header_text1 {
     text-align: center;
+    margin-top: -30px;
     color: #404040;
 }
 
@@ -46,6 +47,7 @@ div.contacts {
 .spisok1 {
     font-size: large;
     list-style-type: none;
+    margin-top: -20px;
 }
 
 a.link_form {
@@ -53,10 +55,10 @@ a.link_form {
 }
 
 .map {
-    width: 850px;
-    margin-left: 70px;
+    width: 900px;
+    margin-left: 50px;
     margin-bottom: 70px;
-    margin-top: 30px;
+    margin-top: 70px;
 }
 
 .mapcolor {
@@ -66,16 +68,20 @@ a.link_form {
 
 .legenda {
     width: 400px;
-    height: 575px;
+    height: 610px;
     position: relative;
-    left: -60px;
+    left: -45px;
     float: right;
-    margin-top: 30px;
+    margin-top: 70px;
 }
 
 
 .nomer {
     width: 30px;
+    margin-right: 10px;
+}
+
+.text {
     margin-right: 10px;
 }
 
