--- a/mainall/static/mainall/css/styles.css
+++ b/mainall/static/mainall/css/styles.css
@@ -54,6 +54,11 @@ a.link_form {
     color: #ffffff;
 }
 
+
+a.ssilka {
+    color: #dc3545;
+}
+
 .map {
     width: 900px;
     margin-left: 50px;
