--- a/mainall/templates/mainall/map_PGU.html
+++ b/mainall/templates/mainall/map_PGU.html
@@ -15,22 +15,22 @@
             <h1 class="header_text1 display-6 fw-bold">Легенда</h1>
         <div class="spisok1 py-4" type="circle">
 
-            <li><img class ="nomer" src="mainall/static/mainall/media/1.png" alt="nomer"/><a href="/login">Корпус № 1. Физфак, Биофак</a></li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/2.png" alt="nomer"/>Корпус № 2. Мехмат, ИПФ, ФСФ</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/3.png" alt="nomer"/>Корпус № 3. СИЯЛ</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/4.png" alt="nomer"/>Корпус № 4. Колледж ПГНИУ</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/5.png" alt="nomer"/>Корпус № 5. Филфак, Юрфак, СИЯЛ</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/6.png" alt="nomer"/>Корпус № 6. Химфак</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/7.png" alt="nomer"/>Корпус № 7. СДК, профком</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/8.png" alt="nomer"/>Корпус № 8. Географы, Геологи</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/9.png" alt="nomer"/>Корпус № 9. Юрфак</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/10.png" alt="nomer"/>Корпус № 10. Спортивный</li>
-            <li><img class ="nomer" src="mainall/static/mainall/media/11.png" alt="nomer"/>Корпус № 11. Юрфак</li>
-            <li><img class ="text" src="mainall/static/mainall/media/12.png" alt="text" width="34px"/>Корпус № 12. Эконом</li>
-            <li><img src="mainall/static/mainall/media/ENI.png" width="60px"/>Корпус ЕНИ</li>
-            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/>Общежитие № 2</li>
-            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/>Общежитие № 8</li>
-            <li><img class ="text" src="mainall/static/mainall/media/BotSad.png" alt="text" width="140px"/>Ботанический сад</li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/1.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 1. Физфак, Биофак</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/2.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 2. Мехмат, ИПФ, ФСФ</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/3.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 3. СИЯЛ</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/4.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 4. Колледж ПГНИУ</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/5.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 5. Филфак, Юрфак, СИЯЛ</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/6.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 6. Химфак</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/7.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 7. СДК, профком</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/8.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 8. Географы, Геологи</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/9.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 9. Юрфак</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/10.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 10. Спортивный</a></li>
+            <li><img class ="nomer" src="mainall/static/mainall/media/11.png" alt="nomer"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 11. Юрфак</a></li>
+            <li><img class ="text" src="mainall/static/mainall/media/12.png" alt="text" width="34px"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус № 12. Эконом</a></li>
+            <li><img src="mainall/static/mainall/media/ENI.png" width="60px"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Корпус ЕНИ</a></li>
+            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Общежитие № 2</a></li>
+            <li><img class ="text" src="mainall/static/mainall/media/obshezh2.png" alt="text" width="70px"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Общежитие № 8</a></li>
+            <li><img class ="text" src="mainall/static/mainall/media/BotSad.png" alt="text" width="140px"/><a class="ssilka" href="http://212.192.88.116/app/dashboards#/view/9f5d1200-f39b-11ec-a6a6-d52710d66575?_g=(filters%3A!())">Ботанический сад</a></li>
 
         </div>
         </div>
