--- a/mainall/templates/mainall/add_user.html
+++ b/mainall/templates/mainall/add_user.html
@@ -7,23 +7,25 @@
 
     <div class="col-md-7 col-lg-5 mx-5">
         <h4 class="mb-3 py-4">Информация о пользователе</h4>
-        <form class="needs-validation" novalidate="">
+        <span>{{ error }}</span><br>
+        <br><form method="post" class="needs-validation" novalidate="">
           <div class="row g-3">
+
             <div class="col-sm-14">
-              <label for="Name" class="form-label">Имя пользователя/Название организации</label>
-              <input type="text" class="form-control" id="Name" placeholder="Имя пользователя/Название организации" required="">
+              <label class="form-label">Имя пользователя/Название организации</label>
+              {{ form.name_pol }}
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
             </div>
 
-              <div class="col-12">
-              <label for="email" class="form-label">Почта пользователя/организации</label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
+            <div class="col-12">
+              <label class="form-label">Почта пользователя/организации</label>
+              {{ form.mail }}
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
-              </div>
+            </div>
 
             <!-- <div class="col-12">
               <label for="login" class="form-label">Логин</label>
@@ -36,23 +38,24 @@
             </div> -->
 
             <div class="col-12">
-              <label for="password" class="form-label">Пароль</label>
-              <input type="text" class="form-control" id="password" placeholder="" required="">
+              <label class="form-label">Пароль</label>
+              {{ form.pas }}
               <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
             </div>
 
             <div class="col-12">
-              <label for="namedev" class="form-label">Название прибора</label>
-              <input type="text" class="form-control" id="namedev" placeholder="">
+              <label class="form-label">Название прибора</label>
+              {{ form.id_dev }}
             </div>
-
+          {% csrf_token %}
           <hr class="my-4">
           <button class="w-100 btn btn-danger btn-lg mb-1" type="submit">Добавить</button>
           <div class="w-100"> </div>
           <div class="w-100"> </div>
           <div class="w-100"> </div>
+          </div>
         </form>
     </div>
 </div>
